base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: compile-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-clusterissuer"
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"

spec:
  tls:
    - hosts:
        - blabla.scg.skku.ac.kr
      secretName: gitops-tls
  rules:
    - host: blabla.scg.skku.ac.kr
      http:
        paths:
          - backend:
              service:
                name: compile-service
                port:
                  number: 80
            path: /
            pathType: Prefix
